# PlaqSegDesktop

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-mac.yml  csr-gen.yml  mac-publish.yml  release.yml
scripts/: export_models.py
src/: app.css  app.html
src-tauri/: Cargo.toml  out.txt  tauri.conf.json  test_ort.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test_ort_providers.rs  test_tensor.rs
src/lib/: invoke.ts  types.ts
src/routes/: +page.svelte
